<resources>
    <!-- login_fragment.xml -->
    <string name="login_text_view">Bem vindo</string>
    <string name="login_email_hint_text_input">Email</string>
    <string name="login_name_hint_text_input">Nome</string>
    <string name="login_password_hint_text_input">Senha</string>
    <string name="login_button_text">Entrar</string>
    <!-- errors -->
    <string name="invalid_email">Preencha o campo no formato de E-mail. Ex: abc@abc.com.br</string>
    <string name="invalid_password"> A senha deve conter pelo menos 6 caracteres</string>
    <string name="fill_the_field">Preencha o campo</string>
    <string name="invalid_name">Digite um nome válido</string>
</resources>